--- a/src/_includes/components/3services.html
+++ b/src/_includes/components/3services.html
@@ -275,8 +275,8 @@
             </li>
         
             <li class="cs-item">
-                <a href="/services/#industrial-development" class="cs-link">
-                    <h3 class="cs-h3">Industrial Development</h3>
+                <a href="/services/#industrial-design-build" class="cs-link">
+                    <h3 class="cs-h3">Industrial Design Build</h3>
                     <p class="cs-item-text">
                         High performance industrial spaces tailored to your operations.
                     </p>
@@ -291,7 +291,7 @@
            
         
             <li class="cs-item">
-                <a href="/services/#building-maintenance" class="cs-link">
+                <a href="/services/#building-maintenance-and-property-management-services" class="cs-link">
                     <h3 class="cs-h3">Building Maintenance</h3>
                     <p class="cs-item-text">
                         Long term upkeep solutions for property managers and owners.
@@ -306,7 +306,7 @@
 
             
             <li class="cs-item">
-                <a href="/services/" class="cs-link">
+                <a href="/services/#mobile-welding-service" class="cs-link">
                     <h3 class="cs-h3">Mobile Welding Service</h3>
                     <p class="cs-item-text">
                         We bring expert welding services directly to your job site with our Mobile Welding Service.
