--- a/src/_includes/components/4_service.html
+++ b/src/_includes/components/4_service.html
@@ -227,7 +227,7 @@
 
       <ul class="cs-card-group">
           <li class="cs-item" >
-              <a href="/services/" class="cs-link">
+              <a href="/services/#tile-and-paint" class="cs-link">
                   <h3 class="cs-h3"> Tile &<BR>Paint Work</h3>
                
               </a>
@@ -238,7 +238,7 @@
               </picture>
           </li>
           <li class="cs-item">
-              <a href="/services/" class="cs-link">
+              <a href="/services/#electrical-upgrades-and-light-plumbing" class="cs-link">
                   <h3 class="cs-h3">Light Plumbing & Electrical Upgrades</h3>
              
               </a>
@@ -249,7 +249,7 @@
               </picture>
           </li>
           <li class="cs-item">
-              <a href="/services/" class="cs-link">
+              <a href="/services/#concrete-staircase-wood-graining" class="cs-link">
                   <h3 class="cs-h3">Concrete Staircase Wood Graining</h3>
                
               </a>
@@ -260,7 +260,7 @@
               </picture>
           </li>
           <li class="cs-item">
-              <a href="/services/" class="cs-link">
+              <a href="/services/#vinyl-cabinet-wrapping-and-wallpaper-installation" class="cs-link">
                   <h3 class="cs-h3">Vinyl Cabinet Wrapping & Wallpaper</h3>
                
               </a>
