--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -947,7 +947,7 @@
                             <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
                         </span>
                         <ul class="cs-drop-ul">
-                            <a href="/about" class="cs-li-link cs-drop-link">
+                            <a href="/services" class="cs-li-link cs-drop-link">
                                View All Services
                             </a>
                             <li class="cs-drop-li cs-drop3-main">
@@ -964,10 +964,10 @@
                                         <a href="/services/#commercial-remodeling" class="cs-li-link cs-drop-link cs-drop-link3">Commercial Remodeling</a>
                                     </li>
                                     <li class="cs-drop-li3">
-                                        <a href="/services/" class="cs-li-link cs-drop-link cs-drop-link3">New Commercial Design Build</a>
+                                        <a href="/services/#commercial-design-build" class="cs-li-link cs-drop-link cs-drop-link3">New Commercial Design Build</a>
                                     </li>
                                     <li class="cs-drop-li3">
-                                        <a href="/services/" class="cs-li-link cs-drop-link cs-drop-link3">Building Maintenance</a>
+                                        <a href="/services/#building-maintenance-and-property-management-services" class="cs-li-link cs-drop-link cs-drop-link3">Building Maintenance</a>
                                     </li>
                         
                                 </ul>
