--- a/src/_includes/components/service1_content.html
+++ b/src/_includes/components/service1_content.html
@@ -300,7 +300,7 @@
                 </li>
 
             </ul>
-            <a class="cs-button-solid" href="">Contact us to get started</a>
+            <a class="cs-button-solid" href="/contact">Contact us to get started</a>
         </div>
     </div>
 </section>
@@ -342,7 +342,7 @@
                 </li>
 
             </ul>
-            <a class="cs-button-solid" aria-label="learn more about our programs" href="">Contact us to get started</a>
+            <a class="cs-button-solid" aria-label="learn more about our programs" href="/contact">Contact us to get started</a>
         </div>
     </div>
 </section>
@@ -351,7 +351,7 @@
 
 <section id="RPsbs-2278">
 
-    <div class="cs-container">
+    <div class="cs-container" id="commercial-design-build">
         <!-- Left Image Section -->
         <picture class="cs-picture" style="border:1px solid #ccc">
             <source media="(max-width: 600px)" srcset="/assets/images/3.jpg">
@@ -385,7 +385,7 @@
                 </li>
 
             </ul>
-            <a class="cs-button-solid" href="">Contact us to get started</a>
+            <a class="cs-button-solid" href="/contact">Contact us to get started</a>
         </div>
     </div>
 </section>
@@ -393,7 +393,7 @@
 
 
 <section id="RPsbsr-2278">
-    <div class="cs-container">
+    <div class="cs-container" id="industrial-design-build">
         <!-- Left Image Section -->
         <picture class="cs-picture">
             <source media="(max-width: 600px)" srcset="/assets/images/4.jpg">
@@ -421,7 +421,7 @@
                 </li>
 
             </ul>
-            <a class="cs-button-solid" aria-label="learn more about our programs" href="">Contact us to get started</a>
+            <a class="cs-button-solid" aria-label="learn more about our programs" href="/contact">Contact us to get started</a>
         </div>
     </div>
 </section>
@@ -431,7 +431,7 @@
 
 <section id="RPsbs-2278">
 
-    <div class="cs-container">
+    <div class="cs-container" id="building-maintenance-and-property-management-services">
         <!-- Left Image Section -->
         <picture class="cs-picture" style="border:1px solid #ccc">
             <source media="(max-width: 600px)" srcset="/assets/images/5.jpg">
@@ -467,7 +467,7 @@
                 </li>
 
             </ul>
-            <a class="cs-button-solid" href="">Contact us to get started</a>
+            <a class="cs-button-solid" href="/contact">Contact us to get started</a>
         </div>
     </div>
 </section>
@@ -483,7 +483,7 @@
         <h2 class="cs-title">Residential & Commercial Services
         </h2>
     </div>
-    <div class="cs-container">
+    <div class="cs-container" id="tile-and-paint">
         <!-- Left Image Section -->
         <picture class="cs-picture">
             <source media="(max-width: 600px)" srcset="/assets/images/residential1.jpg">
@@ -515,7 +515,7 @@
                 </li>
 
             </ul>
-            <a class="cs-button-solid" href="">Contact us to get started</a>
+            <a class="cs-button-solid" href="/contact">Contact us to get started</a>
         </div>
     </div>
 </section>
@@ -526,7 +526,7 @@
 
 
 <section id="RPsbsr-2278">
-    <div class="cs-container">
+    <div class="cs-container" id="electrical-upgrades-and-light-plumbing">
         <!-- Left Image Section -->
         <picture class="cs-picture">
             <source media="(max-width: 600px)" srcset="/assets/images/residential2.jpg">
@@ -557,7 +557,7 @@
                 </li>
 
             </ul>
-            <a class="cs-button-solid" aria-label="learn more about our programs" href="">Contact us to get started</a>
+            <a class="cs-button-solid" aria-label="learn more about our programs" href="/contact">Contact us to get started</a>
         </div>
     </div>
 </section>
@@ -566,7 +566,7 @@
 
 <section id="RPsbs-2278" >
 
-    <div class="cs-container">
+    <div class="cs-container" id="concrete-staircase-wood-graining">
         <!-- Left Image Section -->
         <picture class="cs-picture">
             <source media="(max-width: 600px)" srcset="/assets/images/residential3.jpg">
@@ -600,7 +600,7 @@
                 </li>
 
             </ul>
-            <a class="cs-button-solid" href="">Contact us to get started</a>
+            <a class="cs-button-solid" href="/contact">Contact us to get started</a>
         </div>
     </div>
 </section>
@@ -611,7 +611,7 @@
 
 
 <section id="RPsbsr-2278">
-    <div class="cs-container">
+    <div class="cs-container" id="vinyl-cabinet-wrapping-and-wallpaper-installation">
         <!-- Left Image Section -->
         <picture class="cs-picture">
             <source media="(max-width: 600px)" srcset="/assets/images/residential1.jpg">
@@ -646,7 +646,7 @@
                 </li>
 
             </ul>
-            <a class="cs-button-solid" aria-label="learn more about our programs" href="">Contact us to get started</a>
+            <a class="cs-button-solid" aria-label="learn more about our programs" href="/contact">Contact us to get started</a>
         </div>
     </div>
 </section>
