--- a/src/_includes/components/service1_content.html
+++ b/src/_includes/components/service1_content.html
@@ -495,7 +495,7 @@
         <div class="cs-content">
             <h3 class="cs-h3">Tile & Paint Work</h3>
             <p class="cs-text">
-                Upgrade your space with professional tile installation and high-quality painting services that enhance durability and aesthetics.
+                Upgrade your space with professional tile installation and high quality painting services that enhance durability and aesthetics.
 
             </p>
             <span class="cs-heading">Services Include:</span>
@@ -578,7 +578,7 @@
         <div class="cs-content">
             <h3 class="cs-h3">Concrete Staircase Wood Graining</h3>
             <p class="cs-text">
-                Transform ordinary concrete staircases into realistic wood like finishes for a high-end, natural look without the maintenance.
+                Transform ordinary concrete staircases into realistic wood like finishes for a high end, natural look without the maintenance.
 
             </p>
             <span class="cs-heading">Services Include:</span>
