--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -311,7 +311,7 @@
                   <!--Make this link go to the google page-->
                   <a class="cs-link" href="" target="_blank">
                       <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/pin-white.svg" alt="pin icon" width="24" height="24">
-                     St. Louis, MO
+                     St. Louis Metro Area
                   </a>
               </li>
           </ul>
