--- a/src/_includes/components/service1_content.html
+++ b/src/_includes/components/service1_content.html
@@ -392,41 +392,39 @@
 
 
 
+
 <section id="RPsbsr-2278">
-    <div class="cs-container" id="industrial-design-build">
+    <div class="cs-container" id="mobile-welding-services">
         <!-- Left Image Section -->
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/assets/images/4.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/4.jpg">
-            <img loading="lazy" decoding="async" src="/assets/images/4.jpg" alt="construction" width="500" height="552"
+            <source media="(max-width: 600px)" srcset="/assets/images/galleries/welding/10.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/galleries/welding/10.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/galleries/welding/10.jpg" alt="construction" width="500" height="552"
                 aria-hidden="true">
         </picture>
         <!-- Right Content Section-->
         <div class="cs-content">
-            <h3 class="cs-h3">Industrial Design Build</h3>
+            <h3 class="cs-h3">Mobile Welding Services</h3>
             <p class="cs-text">
-                Industrial spaces need to be efficient, durable, and built to last. We provide cost effective industrial
-                construction solutions that maximize productivity while minimizing long term maintenance. </p>
+                Mobile welding services need to be reliable, precise, and built to withstand the toughest conditions. We provide on site welding solutions that ensure durability, safety, and efficiency for a wide range of industries.
+            </p>
             <span class="cs-heading">Services Include:</span>
             <ul class="cs-ul">
                 <li class="cs-li">
-                    ✔ Warehouse & manufacturing facility construction
+                    ✔ Structural welding & metal fabrication
                 </li>
                 <li class="cs-li">
-                    ✔ Structural improvements & layout optimization
-
+                    ✔ Equipment repair & reinforcement
                 </li>
                 <li class="cs-li">
-                    ✔ Specialized industrial flooring & safety enhancements
+                    ✔ Custom welding solutions for industrial, commercial & residential needs
                 </li>
-
             </ul>
+            
             <a class="cs-button-solid" aria-label="learn more about our programs" href="/contact">Contact us to get started</a>
         </div>
     </div>
 </section>
-
-
 
 
 <section id="RPsbs-2278">
@@ -473,6 +471,39 @@
 </section>
 
 
+<section id="RPsbsr-2278">
+    <div class="cs-container" id="industrial-design-build">
+        <!-- Left Image Section -->
+        <picture class="cs-picture">
+            <source media="(max-width: 600px)" srcset="/assets/images/4.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/4.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/4.jpg" alt="construction" width="500" height="552"
+                aria-hidden="true">
+        </picture>
+        <!-- Right Content Section-->
+        <div class="cs-content">
+            <h3 class="cs-h3">Industrial Design Build</h3>
+            <p class="cs-text">
+                Industrial spaces need to be efficient, durable, and built to last. We provide cost effective industrial
+                construction solutions that maximize productivity while minimizing long term maintenance. </p>
+            <span class="cs-heading">Services Include:</span>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    ✔ Warehouse & manufacturing facility construction
+                </li>
+                <li class="cs-li">
+                    ✔ Structural improvements & layout optimization
+
+                </li>
+                <li class="cs-li">
+                    ✔ Specialized industrial flooring & safety enhancements
+                </li>
+
+            </ul>
+            <a class="cs-button-solid" aria-label="learn more about our programs" href="/contact">Contact us to get started</a>
+        </div>
+    </div>
+</section>
 
 
 
@@ -614,9 +645,9 @@
     <div class="cs-container" id="vinyl-cabinet-wrapping-and-wallpaper-installation">
         <!-- Left Image Section -->
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/assets/images/residential1.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/residential1.jpg">
-            <img loading="lazy" decoding="async" src="/assets/images/residential1.jpg" alt="construction" width="500" height="552"
+            <source media="(max-width: 600px)" srcset="/assets/images/galleries/wallpaper/1.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/galleries/wallpaper/1.jpg">
+            <img loading="lazy" decoding="async" src="/assets/images/galleries/wallpaper/1.jpg" alt="construction" width="500" height="552"
                 aria-hidden="true">
         </picture>
         <!-- Right Content Section-->
