--- a/src/_includes/components/3services.html
+++ b/src/_includes/components/3services.html
@@ -306,16 +306,16 @@
 
             
             <li class="cs-item">
-                <a href="/services/#mobile-welding-service" class="cs-link">
-                    <h3 class="cs-h3">Mobile Welding Service</h3>
+                <a href="/services/#mobile-welding-services" class="cs-link">
+                    <h3 class="cs-h3">Mobile Welding Services</h3>
                     <p class="cs-item-text">
                         We bring expert welding services directly to your job site with our Mobile Welding Service.
                     </p>
                 </a>
                 <picture class="cs-item-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/6.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/6.jpg">
-                    <img decoding="async" src="/assets/images/6.jpg" alt="construction" width="413" height="374" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/galleries/welding/10.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/galleries/welding/10.jpg">
+                    <img decoding="async" src="/assets/images/galleries/welding/10.jpg" alt="construction" width="413" height="374" aria-hidden="true">
                 </picture>
             </li>
         
