--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -1007,7 +1007,7 @@
                                         <a href="/services/#concrete-staircase-wood-graining" class="cs-li-link cs-drop-link cs-drop-link3">Concrete Staircase Wood Graining</a>
                                     </li>
                                     <li class="cs-drop-li3">
-                                        <a href="/services/#vinyl-cabinet-wrapping-and-wallpaper-installation" class="cs-li-link cs-drop-link cs-drop-link3">Vinyl Cabinet Wrapping & Wallpaper Installation</a>
+                                        <a href="/services/#vinyl-cabinet-wrapping-and-wallpaper-installation" class="cs-li-link cs-drop-link cs-drop-link3">Vinyl Cabinet Wrapping &<BR> Wallpaper Installation</a>
                                     </li>
                    
                                 </ul>
