--- a/src/_includes/components/photos_industrial.html
+++ b/src/_includes/components/photos_industrial.html
@@ -176,3 +176,258 @@
                 <span class="cs-tag">Industrial Construction</span>
             </div>
 </DIV>
+
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/1.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/1.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/1.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/2.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/2.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/2.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/3.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/3.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/3.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/4.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/4.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/4.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/5.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/5.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/5.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/6.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/6.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/6.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/7.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/7.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/7.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/8.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/8.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/8.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/9.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/9.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/9.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/10.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/10.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/10.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/11.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/11.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/11.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/12.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/12.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/12.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/13.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/13.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/13.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/15.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/15.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/15.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/16.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/16.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/16.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/17.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/17.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/17.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/18.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/18.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/18.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/19.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/19.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/19.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/20.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/20.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/20.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/21.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/21.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/21.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/22.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/22.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/22.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/23.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/23.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/23.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
+
+<div class="cs-image" href="">
+    <picture class="cs-picture">
+        <source media="(max-width: 600px)" srcset="/assets/images/galleries/industrial/24.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/galleries/industrial/24.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/galleries/industrial/24.jpg" alt="gallery" width="305" height="400">
+    </picture>
+    <div class="cs-info">
+        <span class="cs-tag">Industrial Construction</span>
+    </div>
+</div>
